--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <footer>
 <address> 
 
-<p>WHACHI App de Seguridad. Todos los derechos reservados.</p></address> 
+<p>WACHI App de Seguridad. Todos los derechos reservados.</p></address> 
 </footer>
 
 </body>
